2012-12-14  Ineiev  <ineiev@gmail.com>  (tiny change)

	* configure.ac (HAVE_TERMLIBS): new conditional.  End with
	repeated warning about no terminal library for visibility.
	* Makefile.am (SUBDIRS) [HAVE_TERMLIBS]: only include info/ if
	new conditional is true.
	* man/Makefile.am (man_MANS) [HAVE_TERMLIBS]: likewise for making
	info.1 and infokey.1.

2012-12-14  Thien-Thi Nguyen  <ttn@gnuvola.org>  (tiny change)

	* doc/texinfo.txi (Three Arguments):
	Add @findex xrefautomaticsectiontitle.

2012-12-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Customization Variables): edit
	wording of defaults, etc.

2012-12-10  Patrice Dumas  <pertusus@free.fr>

	* configure.ac, tp/Makefile.am, tp/texi2any.pl, tp/Texinfo/Common.pm, 
	tp/Texinfo/Convert/XML.pm, tp/maintain/catalog.xml.in,
	tp/t/test_utils.pl,
	doc/texinfo.txi (Other Customization Variables):
	Add a new configure variable TEXINFO_DTD_VERSION that holds the version
	of the dtd.  Add the corresponding customization variable in tp/.

2012-12-08  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Command Contexts): @verb is not accepted in 
	simple text commands and sectioning commands.

2012-12-02  Karl Berry  <karl@gnu.org>

	* configure.ac (TERMLIB_VARIANTS): try tinfo first.
	Suggestion from Andreas Schwab, 02 Dec 2012 10:00:44.

2012-12-02  Colin Watson  <cjwatson@ubuntu.com>

	Build gnulib/lib directory in native-tools pass when
	cross-compiling (bug #37852).
	* Makefile.am (SUBDIRS) [TOOLS_ONLY]: Add gnulib/lib.

2012-12-02  Karl Berry  <karl@gnu.org>

	* install-info/tests/defs.in (TMPDIR): define if not defined.

2012-12-02  Patrice Dumas  <pertusus@free.fr>

	* configure.ac: remove gnulib module regex snippet, it is already in 
	gnulib/m4/gnulib-comp.m4.
	* configure.ac, tp/Texinfo/Convert/Unicode.pm: check that Encode is
	available, and use perl >= 5.7.3, required for Encode.  Report from 
	Stefano Lattarini.

2012-12-01  Sergey Poznyakoff  <gray@gnu.org.ua>
